# MHGUQuestEditor

./: CMakeLists.txt  CMakeUserPresets.json  MHGUQuestEditor.rc  README.md  Resource.qrc
MHGUQuestEditor/: CMakeLists.txt  MHGUQuestEditor.cpp  MHGUQuestEditor.h  MHGUQuestEditor.ui  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  main.cpp
MHGUQuestEditor/Monster/: Id.h
MHGUQuestEditor/Resources/: AcEquip.cpp  AcEquip.h  Arc.cpp  Arc.h  BossSet.cpp  BossSet.h  EmSetList.cpp  EmSetList.h  ExtensionResolver.cpp  ExtensionResolver.h  Gmd.cpp  Gmd.h  QuestArc.cpp  QuestArc.h  QuestData.cpp  QuestData.h  QuestLink.cpp  QuestLink.h  Rem.cpp  Rem.h  StatTable.cpp  StatTable.h
MHGUQuestEditor/Util/: Crc32.h  QuestId.h
MHGUQuestEditor/Widgets/AcEquipEditor/: AcEquipEditor.cpp  AcEquipEditor.h  AcEquipEditor.ui  EquipSetEditor.cpp  EquipSetEditor.h  EquipSetEditor.ui
MHGUQuestEditor/Widgets/BossSetEditor/: BossSetEditor.cpp  BossSetEditor.h  BossSetEditor.ui
MHGUQuestEditor/Widgets/EmSetListEditor/: EmSetListEditor.cpp  EmSetListEditor.h  EmSetListEditor.ui
res/: armor_series_data.gmd  armor_series_data.json  em_level.json  em_names.json  em_nando_tbl.nan  ems_names.json  hunter_arts.json  icon_names.json  item_names.json  map_names.json  quest_bgm.json  quest_carve_level.json  quest_clear_type.json  quest_fishing_level.json  quest_gather_level.json  quest_level.json  quest_objective.json  quest_requirement.json  quest_start_type.json  quest_subtype.json  quest_type.json  skill_names.json  spawns.json  weapons.json
